# gprc-comms

./: .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md  config.yaml  main.cpp  serverBringup.cpp  serverStartup.sh  startup.sh
include/: README.md  client.hpp  server.hpp  server_engine.hpp  utils.hpp
protos/: platformCommunications.proto
src/: client.cpp  server.cpp  server_engine.cpp
tests/: basicTests.cpp  clientTests.cpp  client_tests.cpp  local_tests.cpp
